# whisper-inference

./: Cargo.toml
src/: old_main.rs
