[package]
name = "whisper-inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { git="https://github.com/huggingface/candle/", package = "candle-core", features= ["metal"] }
candle-transformers = { git="https://github.com/huggingface/candle/", package = "candle-transformers", features= ["metal"] }
candle-nn = { git="https://github.com/huggingface/candle/", package = "candle-nn", features= ["metal"] }
clap = { version = "4.4.13", features = ["derive"] }
hf-hub = "0.3.2"
tokenizers = "0.15.0"
anyhow = "1.0.79"
serde_json = "1.0.111"

